--- a/teamproject3/src/main/webapp/resources/css/style.css
+++ b/teamproject3/src/main/webapp/resources/css/style.css
@@ -2557,4 +2557,10 @@ article.single-post p {
   font-size:50pt;
 }
 
+.imageContainer img{
+position: absolute; top:0; left: 0;
+width: 100%;
+height: 100%;
+}
+
 
